{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 48,
  "lineage": "463281c4-d5f2-7aab-7fdd-887d2de7e35f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:225989354889:instance/i-0b8c89d1721ed80ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8c89d1721ed80ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff08391769bde7ee",
            "private_dns": "ip-10-0-0-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.121",
            "public_dns": "ec2-3-87-187-110.compute-1.amazonaws.com",
            "public_ip": "3.87.187.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03485a1be1189d790",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b546575122cc8bd",
            "tags": {
              "Environment": "DEPI",
              "Name": "Python-App-Server",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "Python-App-Server",
              "Owner": "Ibrahim Aamer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091fc120c5133d054"
            ]
          },
          "dependencies": [
            "aws_key_pair.UbuntuKP",
            "aws_security_group.UbuntuSG",
            "aws_subnet.subnet_public_1",
            "aws_vpc.main_vpc",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989354889:internet-gateway/igw-0884519b8478b696c",
            "id": "igw-0884519b8478b696c",
            "owner_id": "225989354889",
            "tags": {
              "Environment": "DEPI",
              "Name": "main_igw",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "main_igw",
              "Owner": "Ibrahim Aamer"
            },
            "vpc_id": "vpc-0c1701854b7c563a8"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989354889:route-table/rtb-086ea8692719ae677",
            "id": "rtb-086ea8692719ae677",
            "owner_id": "225989354889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0884519b8478b696c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DEPI",
              "Name": "public_route_table",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "public_route_table",
              "Owner": "Ibrahim Aamer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1701854b7c563a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a77651b80d1f4a1",
            "route_table_id": "rtb-086ea8692719ae677",
            "subnet_id": "subnet-02b546575122cc8bd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UbuntuSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989354889:security-group/sg-091fc120c5133d054",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091fc120c5133d054",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241013140404408700000001",
            "name_prefix": "terraform-",
            "owner_id": "225989354889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEPI",
              "Name": "ubuntu-instance",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "ubuntu-instance",
              "Owner": "Ibrahim Aamer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1701854b7c563a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989354889:subnet/subnet-02b546575122cc8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b546575122cc8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225989354889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEPI",
              "Name": "subnet-public-1",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "subnet-public-1",
              "Owner": "Ibrahim Aamer"
            },
            "vpc_id": "vpc-0c1701854b7c563a8"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989354889:vpc/vpc-0c1701854b7c563a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6de079da2a841c3",
            "default_route_table_id": "rtb-077af428c6186a16c",
            "default_security_group_id": "sg-0e034ce83e275aed0",
            "dhcp_options_id": "dopt-080f439414a92df31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1701854b7c563a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-077af428c6186a16c",
            "owner_id": "225989354889",
            "tags": {
              "Environment": "DEPI",
              "Name": "main_vpc",
              "Owner": "Ibrahim Aamer"
            },
            "tags_all": {
              "Environment": "DEPI",
              "Name": "main_vpc",
              "Owner": "Ibrahim Aamer"
            }
          }
        }
      ]
    }
  ]
}